# Inside of setup.cfg
[metadata]
description-file = README.md
project_urls =
    Bug Tracker = https://github.com/easydns/chapps/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Topic :: Communications :: Email :: Filters
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >=3.8
install_requires =
    redis>=4.1.2
    expiring-dict
    dnspython
    mariadb
    pyspf
    python-pidfile

[options.packages.find]
where = chapps

[options.extras_require]
API =
    fastapi>=0.74.0,<0.75.0
    gunicorn
    uvicorn[standard]
    pydantic
    SQLAlchemy
    pymysql
dev =
    pytest
    coverage
    pytest-cov
    pytest-services
    pytest-order
    pytest-asyncio
    aiosmtpd
    python-dotenv
