# Inside of setup.cfg
[metadata]
description-file = README.md
project_urls =
    Bug Tracker = https://github.com/easydns/chapps/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Topic :: Communications :: Email :: Filters
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
python_requires = >=3.8
install_requires =
    redis>=4.1.2
    expiring-dict
    validators
    email-validator
    mysqlclient
    python-pidfile
    pydantic
    SQLAlchemy

[options.packages.find]
where = chapps

[options.extras_require]
SPF =
    dnspython
    pyspf
API =
    fastapi>=0.74.0,<0.75.0
    gunicorn
    uvicorn[standard]
dev =
    pytest
    coverage
    pytest-cov
    pytest-services
    pytest-order
    pytest-asyncio
    pytest-timeout
    aiosmtpd
    python-dotenv
    pylint-pytest
doc =
    sphinx>=4.5.0,<4.6.0
    sphinx-rtd-theme>=1.0.0,<1.1
    sphinx-autodoc-typehints>=1.18.1,<1.19
    myst-parser>=0.17.2,<0.18